# dyson-orchestrator

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/egress-proxy/: Cargo.toml
crates/egress-proxy/src/: main.rs
crates/mcp-runtime/: Cargo.toml
crates/swarm/: Cargo.toml  build.rs
docs/: README.md  architecture-overview.md  artefacts.md  audit.md  auth-and-keys.md  configuration.md  controllers.md  database-backends.md  http-and-spa.md  llm-proxy.md  mcp-and-oauth.md  multiple-databases.md  network-policies.md  operations.md  state-ownership.md  storage-and-secrets.md  testing.md
migrations/postgres/: 0004_instance_identity.sql  0005_envelope_secrets.sql  0006_instance_network_policy.sql  0011_policy_check_constraints.sql  0014_nolocalnet_default.sql
migrations/sqlite/: 0003_audit_owner.sql  0011_policy_check_constraints.sql  0012_audit_completion.sql
src/: api_client.rs  artefacts.rs  auth.rs  cli.rs  config.rs  cube_client.rs  dyson_reconfig.rs  envelope.rs  error.rs  instance.rs  instance_id.rs  lib.rs  logging.rs  main.rs  mcp_servers.rs  network_policy.rs  openrouter.rs  policy.rs  probe.rs  secrets.rs  snapshot.rs  traits.rs  ttl.rs  webhooks.rs
src/auth/: admin.rs  bearer.rs  chain.rs  mod.rs  oidc.rs  user.rs
src/backup/: local.rs  mod.rs  s3.rs
src/db/: audit.rs  instances.rs  mod.rs  policies.rs  secrets.rs  snapshots.rs  tokens.rs  users.rs  webhooks.rs
src/http/: admin_users.rs  (+13 more)
tests/: backup_s3_minio.rs  e2e_mock_cube.rs  integration_extra.rs  share_flow.rs
(+215 files in other folders)
