[package]
name = "dyson-egress-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Policy-aware Dyson sandbox egress proxy"
license.workspace = true
publish.workspace = true

[[bin]]
name = "dyson-egress-proxy"
path = "src/main.rs"

[dependencies]
dyson-swarm-core = { path = "../core", default-features = false }

bytes.workspace = true
clap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
